@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:48 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 19:36:41 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	https://cran.r-project.org/web/packages/gss/
 COMMENT=	General smoothing splines
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	gss
-R_PKGVER=	2.1-7
+R_PKGVER=	2.1-10
 
 USE_LANGUAGES=	c fortran
 
